--- a/.github/workflows/stubs/ci-all-go-echo-stub.yml
+++ b/.github/workflows/stubs/ci-all-go-echo-stub.yml
@@ -24,9 +24,18 @@ on:
            
 jobs: 
   call-echo-service:
-    runs-on: ubuntu-latest
-    steps:
-       - name: Call simple echo workflow
-         uses: chef/common-github-actions/.github/workflows/ci-all-go-echo.yml@main
-         with:
-           foo: 'hello world'
+    #runs-on: ubuntu-latest
+    #steps:
+    #   - name: Call simple echo workflow
+      uses: chef/common-github-actions/.github/workflows/ci-all-go-echo.yml@main
+      with:
+        message: 'hello world'
+
+  # CI-pipeline:
+  #   uses: 'chef/common-github-actions/.github/workflows/ci-release-go-cli.yml@main'
+  #   with:
+  #     application-name: "arch-sample-cli"
+
+  # Sonar:
+  #   uses: 'chef/common-github-actions/.github/workflows/sonarqube.yml@main'
+  #     secrets: inherit
