adding trufflehog scan to ci-all-ruby-main

--- a/.github/workflows/ci-all-ruby-main.yml
+++ b/.github/workflows/ci-all-ruby-main.yml
@@ -23,3 +23,9 @@ jobs:
       - name: echo
         run: |
           echo "Hello ${{ inputs.message }}"
+
+  run-trufflehog:
+    uses: chef/common-github-actions/.github/workflows/trufflehog.yml@main
+    # with:
+    #   message: 'hello world'
+  
