--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -25,11 +25,11 @@ jobs:
       with:
         extra_args: --results=verified,unknown --json --fail --github-actions
         
-    - name: Upload test coverage artifact
-      uses: actions/upload-artifact@v4
-      with:
-        # Name of the artifact to upload.
-        # Optional. Default is 'artifact'
-        name: test-coverage.out
-        # A file, directory or wildcard pattern that describes what to upload
-        path: test/unittest/coverage.out
+    # - name: Upload test coverage artifact
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     # Name of the artifact to upload.
+    #     # Optional. Default is 'artifact'
+    #     name: test-coverage.out
+    #     # A file, directory or wildcard pattern that describes what to upload
+    #     path: test/unittest/coverage.out
