--- a/.github/workflows/sonarqube-public-repo.yml
+++ b/.github/workflows/sonarqube-public-repo.yml
@@ -1,12 +1,18 @@
-name: SonarQube scan
+name: SonarQube scan (public)
 
 on:
-  # Trigger analysis when pushing to your main branches, and when creating a pull request.
   workflow_call:
     
 jobs:
+  echo_inputs:
+    name: 'Echo pipeline stage'
+    runs-on: ubuntu-latest
+    steps:
+    - name: Echo inputs
+      run: |
+        echo "Sonarqube scan for public repositories, running on ubuntu-latest-4-cores runner"
+    
   sonarqube:
-    # runs-on: ubuntu-latest-4-cores
     runs-on: ip-range-controlled
     steps:
     - uses: actions/checkout@v4
@@ -27,13 +33,12 @@ jobs:
     #   run: go test -v -coverprofile="coverage.out" ./... 
     # - name: Copy file
     #   run: mkdir -p test/coverage; cp coverage.out test/coverage/coverage.out
-
+    # if: always()
+      
     - name: SonarQube Scan
-      # if: always()
       uses: sonarsource/sonarqube-scan-action@v5.0.0
       continue-on-error: true
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        # SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }} - TODO: make this instead of a secret into an organizational variable
 
