--- a/.github/workflows/stubs/ci-main-pull-request-checks-stub.yml
+++ b/.github/workflows/stubs/ci-main-pull-request-checks-stub.yml
@@ -11,15 +11,12 @@ on:
 
   workflow_dispatch:
 
-env:  # set environment variables for the GA
-  REPO_VISIBILITY: ${{ github.event.repository.visibility }}  # optional, defaults to public
-  
 jobs: 
   call-ci-main-pr-check-pipeline:
     uses: chef/common-github-actions/.github/workflows/ci-main-pull-request-checks.yml@main
     secrets: inherit
     with:   # named inputs for the GA
       language: 'Ruby'
-      visibility: ${{ env.REPO_VISIBILITY }} # optional, defaults to public
+      visibility: ${{ github.event.repository.visibility }} # optional, defaults to public
       skip-trufflehog: false
       skip-sonarqube: false
