--- a/.github/workflows/ci-main-pull-request-checks.yml
+++ b/.github/workflows/ci-main-pull-request-checks.yml
@@ -104,12 +104,12 @@ jobs:
    
   # TODO: use the visibility of repo, so that we can GO_PRIVATE with secrets.GITHUB_TOKEN and set right runner for SQ on SONAR_TOKEN - public: ubuntu-latest-4-cores, private: ip-range-controlled
   run-sonarqube-public-repo:
-    if: ${{ inputs.skip-sonarqube == false }} && ${{ inputs.visibility == 'public' }}
+    if: ${{ inputs.skip-sonarqube == false && inputs.visibility == 'public' }}
     uses: chef/common-github-actions/.github/workflows/sonarqube-public-repo.yml@main
     needs: run-trufflehog
     secrets: inherit
   run-sonarqube-private-internal-repo:
-    if: ${{ inputs.skip-sonarqube == false }} && ( ${{ inputs.visibility == 'internal' }}  || ${{ inputs.visibility == 'private' }} )
+    if: ${{ inputs.skip-sonarqube == false && ( inputs.visibility == 'internal' || inputs.visibility == 'private' ) }}
     uses: chef/common-github-actions/.github/workflows/sonarqube-private-internal-repo.yml@main
     needs: run-trufflehog
     secrets: inherit
