updating this workflow so that it can be called remotely
Signed-off-by: Sean Simmons <sean.simmons@progress.com>

--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -4,6 +4,13 @@ on:
   workflow_dispatch:
   pull_request:
     branches: [ main ]
+  workflow_call:
+    inputs:
+      skip-trufflehog:
+        description: 'Skip trufflehog scan'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   TruffleHog:
