--- a/.github/workflows/tools/sonarqube-public-repo.yml
+++ b/.github/workflows/tools/sonarqube-public-repo.yml
@@ -1,4 +1,5 @@
-name: SonarQube scan (public)
+# sonarqube-public-repo.yml
+name: SonarQube scan (public repo)
 
 on:
   workflow_call:
@@ -11,7 +12,19 @@ jobs:
     - name: Echo inputs
       run: |
         echo "Sonarqube scan for public repositories, running on ubuntu-latest-4-cores runner"
-    
+        name: 'Echo version of pipeline and inputs'
+        runs-on: ubuntu-latest
+        steps:
+          - name: echo version of pipeline and inputs
+            run: |
+              echo "pipeline version $PIPELINE_VERSION"
+              echo "Language set to ${{ inputs.language }} "
+              echo "SCC output filename set to ${{ inputs.outputfilename }} "
+              echo "Visibility set to $REPO_VISIBILITY [ ${{ inputs.visibility }} ]"
+              echo "Skip trufflehog set to ${{ inputs.skip-trufflehog }}"
+              echo "Skip SonarQube set to ${{ inputs.skip-sonarqube }}"
+              echo "Skip unit tests set to ${{ inputs.skip-unit-tests }}"
+     
   # IP-RANGE-CONTROLLED does not work... probably needs IP range refresh, cannot get throughto api.sonar
   sonarqube:
     runs-on: ip-range-controlled
@@ -42,4 +55,5 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
 
