--- a/workflow-supporting-files/sonar-templates/sonar-project.properties
+++ b/workflow-supporting-files/sonar-templates/sonar-project.properties
@@ -20,6 +20,7 @@ sonar.sources=.
 # sonar.go.coverage.reportPaths=., test/coverage/coverage.out
 # sonar.externalIssuesReportPaths	Comma-delimited list of paths to generic issue reports. 
 # sonar.sarifReportPaths	Comma-delimited list of paths to SARIF issue reports.
+# sonar.ruby.rubocop.reportPaths=./rubocop-report.json -- import Ruby Rubocop
 
 # Additional settings
 sonar.qualitygate.wait=false
